--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <main>
         <section class="score">
-            <span>max:<span id="maxScore">0</span></span>
+            <span>max : <span id="maxScore">0</span></span>
             <br>
-            <span>score:<span id="currScore">0</span></span>
+            <span>score : <span id="currScore">0</span></span>
         </section>
         <section class="playsection">
             <img src="./images/background.png" alt="background" decoding="async" loading="eager">
@@ -30,12 +30,12 @@
                 <img src="./images/pipe.png" alt="pipe" decoding="async" loading="lazy">
             </div> -->
         </section>
-        <!-- <section class="playPause">
-            <img src="./images/icons8-pause-64.png" decoding="async" alt="pause" loading="eager">
-        </section> -->
+        <section class="restart">
+            <img src="./images/restart.png" decoding="async" alt="pause" loading="eager">
+        </section>
     </main>
 
-    <script src="./app.js"></script>
+    <script id="script" src="./app.js"></script>
 </body>
 
 </html>
