--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 <body>
 
     <main>
+        <section class="name">
+            <img src="./images/logo.png" alt="">
+        </section>
         <section class="score">
+            <span id="currScore">0</span>
             <span>max : <span id="maxScore">0</span></span>
-            <br>
-            <span>score : <span id="currScore">0</span></span>
         </section>
         <section class="playsection">
             <img src="./images/background.png" alt="background" decoding="async" loading="eager">
@@ -31,7 +33,11 @@
             </div> -->
         </section>
         <section class="restart">
+            <img src="./images/gameover.png" alt="game over" loading="lazy" decoding="async">
             <img src="./images/restart.png" decoding="async" alt="pause" loading="eager">
+        </section>
+        <section class="message">
+            <img src="./images/message.png" alt="message" loading="eager" decoding="async">
         </section>
     </main>
 
