--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </section>
         <section class="score">
             <span id="currScore">0</span>
-            <span>max : <span id="maxScore">0</span></span>
+            <span>Best : <span id="maxScore">0</span></span>
         </section>
         <section class="playsection">
             <img src="./images/background.png" alt="background" decoding="async" loading="eager">
