--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
         <section class="message">
             <img src="./images/message.png" alt="message" loading="eager" decoding="async">
         </section>
+        <!--Audio-->
+        <audio src="./audio/flappy-bird-hit-sound-101soundboards.mp3" class="dead"></audio>
+        <audio src="./audio/point-101soundboards.mp3" class="point"></audio>
+        <audio src="./audio/flap-101soundboards.mp3" class="flap"></audio>
+        <audio src="./audio/swoosh-101soundboards.mp3" class="fall"></audio>
     </main>
 
     <script id="script" src="./app.js"></script>
