--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <audio src="./audio/flappy-bird-hit-sound-101soundboards.mp3" class="dead"></audio>
         <audio src="./audio/point-101soundboards.mp3" class="point"></audio>
         <audio src="./audio/flap-101soundboards.mp3" class="flap"></audio>
-        <audio src="./audio/swoosh-101soundboards.mp3" class="fall"></audio>
+        <!-- <audio src="./audio/swoosh-101soundboards.mp3" class="fall"></audio> -->
     </main>
 
     <script id="script" src="./app.js"></script>
