--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
             <div class="groundContainer"></div>
         </section>
         <section class="bird">
+            <div class="birdInner"></div>
+            <div class="birdInner"></div>
         </section>
         <section class="object">
             <!-- <div class="objChild">
