--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         </section>
         <section class="playsection">
             <img src="./images/background.png" alt="background" decoding="async" loading="eager">
+            <img src="./images/background-night.png" alt="background" decoding="async" loading="lazy">
         </section>
         <section class="ground">
             <div class="groundContainer"></div>
