add life system

--- a/index.html
+++ b/index.html
@@ -12,11 +12,16 @@
 
     <main>
         <section class="name">
-            <img src="./images/logo.png" alt="">
+            <img src="./images/logo.png" alt="Flappy Bird" decoding="async" loading="eager">
         </section>
         <section class="score">
             <span id="currScore">0</span>
             <span>Best : <span id="maxScore">0</span></span>
+        </section>
+        <section class="life">
+            <img src="./images/icons8-love-32.png" alt="Life" loading="lazy" decoding="async">
+            <img src="./images/icons8-love-32.png" alt="Life" loading="lazy" decoding="async">
+            <img src="./images/icons8-love-32.png" alt="Life" loading="lazy" decoding="async">
         </section>
         <section class="playsection">
             <img src="./images/background.png" alt="background" decoding="async" loading="eager">
