--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 
     <main>
         <section class="playsection">
-            <img src="./images/background.png" alt="background" decoding="async" loading="eager">
             <img src="./images/background-night.png" alt="background" decoding="async" loading="lazy">
+            <img src="./images/background.png" alt="background" decoding="async" loading="eager">
         </section>
         <section class="ground">
             <div class="groundContainer"></div>
@@ -32,7 +32,7 @@
                 <button class="right">></button>
             </div>
             <div class="start">
-                <img src="./images//start.png" alt="start" loading="eager" decoding="async">
+                <img src="./images/start.png" alt="start" loading="eager" decoding="async">
             </div>
         </section>
 
