--- a/index.html
+++ b/index.html
@@ -25,16 +25,69 @@
 
         <section class="menu">
             <div class="birdContainer">
-                <button class="left"><</button>
-                <div class="birdList">
-                    <div class="birdImg"></div>
-                </div>
-                <button class="right">></button>
+                <button class="left">
+                    < </button>
+                        <div class="birdList">
+                            <div class="birdImg">
+                                <div class="hat"></div>
+                            </div>
+                        </div>
+                        <button class="right">></button>
             </div>
-            <div class="start">
-                <img src="./images/start.png" alt="start" loading="eager" decoding="async">
+            <div class="shop">
+                <div class="hatShop">
+                    <img src="./images/icons8-hat-90.png" alt="Hat" decoding="async" loading="eager">
+                </div>
+                <div class="start">
+                    <span>start</span>
+                </div>
             </div>
         </section>
+        <div class="hatList">
+            <div class="cross">X</div>
+            <div class="list">
+                <div class="hatbox">
+                    <img src="" alt="">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/beanie.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/bucket_hat.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/cap_blue.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/cap_red.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/cowboy.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/crown.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/cylinder.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/flowers.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/headphones_blue.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/headphones_red.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/party.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/wizard.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+
+            </div>
+        </div>
 
 
         <section class="playOn">
@@ -48,14 +101,15 @@
                 <img src="./images/icons8-love-32.png" alt="Life" loading="lazy" decoding="async">
             </div>
             <div class="bird">
+                <div class="hat"></div>
                 <div class="birdInner"></div>
                 <div class="birdInner"></div>
             </div>
             <div class="object">
                 <!-- <div class="objChild">
-                <img src="./images/pipe.png" alt="pipe" decoding="async" loading="lazy">
-                <img src="./images/pipe.png" alt="pipe" decoding="async" loading="lazy">
-            </div> -->
+                    <img src="./images/pipe.png" alt="pipe" decoding="async" loading="lazy">
+                    <img src="./images/pipe.png" alt="pipe" decoding="async" loading="lazy">
+                </div> -->
             </div>
             <div class="restart">
                 <img src="./images/gameover.png" alt="game over" loading="lazy" decoding="async">
