--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
                     <img src="./images/hats/headphones_blue.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
+                    <img src="./images/hats/headphones_gray.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
+                    <img src="./images/hats/headphones_green.png" alt="hat" decoding="async" loading="lazy">
+                </div>
+                <div class="hatbox">
                     <img src="./images/hats/headphones_red.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
