--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <div class="birdList">
                             <div class="birdImg">
                                 <div class="hat"></div>
+                                <div class="mouth"></div>
                             </div>
                         </div>
                         <button class="right">></button>
@@ -40,6 +41,9 @@
                 </div>
                 <div class="start">
                     <span>start</span>
+                </div>
+                <div class="mouthShop">
+                    <img src="./images/icons8-horn-96.png" alt="Hat" decoding="async" loading="eager">
                 </div>
             </div>
         </section>
@@ -94,7 +98,44 @@
 
             </div>
         </div>
-
+        <div class="mouthList">
+            <div class="mouthCross">X</div>
+            <div class="mouth-list">
+                <div class="mouthbox">
+                    <img src="" alt="">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/cigarette.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/flower.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/mask.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/party_horn.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/pipe.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/tongue.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/whistle_blue.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/whistle_green.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/whistle_orange.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+                <div class="mouthbox">
+                    <img src="./images/mouth/whistle_red.png" alt="mouth" decoding="async" loading="lazy">
+                </div>
+            </div>
+        </div>
 
         <section class="playOn">
             <div class="score">
@@ -108,6 +149,7 @@
             </div>
             <div class="bird">
                 <div class="hat"></div>
+                <div class="mouth"></div>
                 <div class="birdInner"></div>
                 <div class="birdInner"></div>
             </div>
