--- a/index.html
+++ b/index.html
@@ -54,46 +54,46 @@
                     <img src="" alt="">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/beanie.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/beanie - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/bucket_hat.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/bucket_hat - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/cap_blue.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/cap_blue - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/cap_red.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/cap_red - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/cowboy.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/cowboy - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/crown.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/crown - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/cylinder.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/cylinder - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/flowers.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/flowers - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/headphones_blue.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/headphones_blue - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/headphones_gray.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/headphones_gray - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/headphones_green.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/headphones_green - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/headphones_red.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/headphones_red - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/party.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/party - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
                 <div class="hatbox">
-                    <img src="./images/hats/wizard.png" alt="hat" decoding="async" loading="lazy">
+                    <img src="./images/hats/wizard - Copy.png" alt="hat" decoding="async" loading="lazy">
                 </div>
 
             </div>
@@ -105,34 +105,34 @@
                     <img src="" alt="">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/cigarette.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/cigarette - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/flower.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/flower - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/mask.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/mask - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/party_horn.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/party_horn - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/pipe.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/pipe - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/tongue.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/tongue - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/whistle_blue.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/whistle_blue - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/whistle_green.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/whistle_green - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/whistle_orange.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/whistle_orange - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
                 <div class="mouthbox">
-                    <img src="./images/mouth/whistle_red.png" alt="mouth" decoding="async" loading="lazy">
+                    <img src="./images/mouth/whistle_red - Copy.png" alt="mouth" decoding="async" loading="lazy">
                 </div>
             </div>
         </div>
