preload images in head tag using <link rel'=preload' href='...' as='image'>

--- a/index.html
+++ b/index.html
@@ -6,6 +6,42 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Flappy Bird</title>
+
+    <!-- preload -->
+    <link rel="preload" href="./images/bird/bird.png" as="image">
+    <link rel="preload" href="./images/bird/blackBird.png" as="image">
+    <link rel="preload" href="./images/bird/blueBird.png" as="image">
+    <link rel="preload" href="./images/bird/goldenBird.png" as="image">
+    <link rel="preload" href="./images/bird/greenBird.png" as="image">
+    <link rel="preload" href="./images/bird/rainbowBird.png" as="image">
+    <link rel="preload" href="./images/bird/whiteBird.png" as="image">
+
+    <link rel="preload" href="./images/hats/beanie.png" as="image">
+    <link rel="preload" href="./images/hats/bucket_hat.png" as="image">
+    <link rel="preload" href="./images/hats/cap_blue.png" as="image">
+    <link rel="preload" href="./images/hats/cap_red.png" as="image">
+    <link rel="preload" href="./images/hats/cowboy.png" as="image">
+    <link rel="preload" href="./images/hats/crown.png" as="image">
+    <link rel="preload" href="./images/hats/cylinder.png" as="image">
+    <link rel="preload" href="./images/hats/flowers.png" as="image">
+    <link rel="preload" href="./images/hats/headphones_blue.png" as="image">
+    <link rel="preload" href="./images/hats/headphones_gray.png" as="image">
+    <link rel="preload" href="./images/hats/headphones_green.png" as="image">
+    <link rel="preload" href="./images/hats/headphones_orange.png" as="image">
+    <link rel="preload" href="./images/hats/headphones_red.png" as="image">
+    <link rel="preload" href="./images/hats/party.png" as="image">
+    <link rel="preload" href="./images/hats/wizard.png" as="image">
+
+    <link rel="preload" href="./images/mouth/cigarette.png" as="image">
+    <link rel="preload" href="./images/mouth/flower.png" as="image">
+    <link rel="preload" href="./images/mouth/mask.png" as="image">
+    <link rel="preload" href="./images/mouth/party_horn.png" as="image">
+    <link rel="preload" href="./images/mouth/pipe.png" as="image">
+    <link rel="preload" href="./images/mouth/tongue.png" as="image">
+    <link rel="preload" href="./images/mouth/whistle_blue.png" as="image">
+    <link rel="preload" href="./images/mouth/whistle_green.png" as="image">
+    <link rel="preload" href="./images/mouth/whistle_orange.png" as="image">
+    <link rel="preload" href="./images/mouth/whistle_red.png" as="image">
 </head>
 
 <body>
